# homework

ComDesAndOrg/: storage.circ
ComDesAndOrg/CPU/: alu.circ  cpu.circ  cpu.xlsx  dog-mem-dump  dog-test.asm  fix.sh  fuck.txt  tester.hex  xi-mem-dump
ComDesAndOrg/chapter123/: alu-test.circ  alu.circ  data.circ
ComDesAndOrg/storage/: storage.circ
OS/: CMakeLists.txt
OS/lab1/: CMakeLists.txt  main.cpp
OS/lab2/: CMakeLists.txt  main.cpp
OS/lab3/: CMakeLists.txt  main.cpp
OS/lab4/: CMakeLists.txt  main.cpp  note.txt
algorithm/: test-hw1.cpp  test-hw4.cpp
algorithm/interval_cover/: interval_cover.cpp  interval_cover.h  inteval_cover.tex
algorithm/k-th/: k-th.py  kruskal.py
algorithm/matrix_chain/: matrix_chain.cpp  matrix_chain.h
algorithm/professor_student/: README.md  graph.h  main.cpp  maxflow.py
algorithm/string_match/: graph.h  min_bin_heap.h  string_match.cpp  string_match.h
algorithm/tiled_cover/: graph.h  tiled_cover.cpp  tiled_cover.h  tiled_cover.tex
database/: 2.6.sql  final.html  final.md  final1.md  final3.md  final4.md  final5.md
database/exercises/: createTable.sql
database/grant/: 4.sql  5.sql
database/schooling/: table_create.sql
database/spj/: 2.6.sql  3.5.sql  create_table.sql  homework.sql
database/tmp_st/: 3.3.sql
deeplearning/: ML_HW2Q.tex
operation_research/tabu-search-color/: .backup_engine.h  1470.cpp  CMakeLists.txt  EnemyTable.h  TS_algorithm.cc  TabuSearch.h  TabuTenure.h  a.out  cost_engine.h  enemy_table.h  engine.h  graph.h  heap_del.h  main.cpp  poj  searcher.cpp  tabu_table.h  testGPX.cpp  wheel.h
operation_research/tabu-search-color/.archive/: TS_algorithm.cc  cost_engine.h  main.cpp
pic/: 01-contract.c0  01-contract.md  02-ints.c0  02-ints.md  fake_header.h
pic/archive/: README.md
pic/chapter23/: 01-contract.md
poj/: 1.txt  CMakeLists.txt  pack.py  wheel.h
poj/diff_constraints/: 1201.cpp  1275.cpp  3159.cpp  CMakeLists.txt  graph.h
poj/disjoint_set/: 1182.cpp  1417.cpp  1733.cpp  2912.cpp  CMakeLists.txt
poj/fenwick_tree/: 1990.cpp  2481.cpp  2892.cpp  3321.cpp  CMakeLists.txt  fenwick.h  fenwick_template.h  fenwick_test.cpp
poj/lca_and_rmq/: 1470.cpp  1986.cpp  2763.cpp  3728.cpp  CMakeLists.txt  forward_list.h  monoid_tree.h  monoid_tree_test.cpp
poj/segment_tree/: 2777-test.cpp  2777.cpp  3277.cpp  CMakeLists.txt  gen.py  segment_tree.h
poj/suffix_array/: 2406.cpp  3294.cpp  3415.cpp  3693-fake.cpp  3693.cpp  CMakeLists.txt  sa_is.h  suffix_array_test.cpp
poj/toy/: CMakeLists.txt  stockseller.cpp  testcase.txt
project/: CMakeLists.txt  md5.cpp  test.py
(+69 files in other folders)
