cmake_minimum_required(VERSION 3.5)
project(poj)

set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_EXTENSIONS off)
add_compile_options(-Werror -Wall -std=c++98)
add_definitions(-DDOG_DEBUG)
add_definitions(-D_GLIBCXX_DEBUG)
# add_subdirectory(disjoint_set)
# add_subdirectory(fenwick_tree)
# add_subdirectory(suffix_array)
add_subdirectory(lca_and_rmq)
